@@ -12,8 +12,8 @@ DROP TABLE IF EXISTS questions;
 CREATE TABLE questions (
   uid int(16) NOT NULL default '0',
   question varchar(120) NOT NULL,
-  examples int(16) NOT NULL default '0',
-  answers int(16) NOT NULL default '0',
+  examples int(1) NOT NULL default '0',
+  answers int(1) NOT NULL default '0',
   commentable int(1) NOT NULL default '0',
   PRIMARY KEY  (uid)
 ) TYPE=MyISAM;
@@ -23,4 +23,4 @@ CREATE TABLE questions (
 --
 
 INSERT INTO questions VALUES (0,'What\'s in a namespace?','0','0','1');
-INSERT INTO questions VALUES (1,'A question with an example','1','0','0');
+INSERT INTO questions VALUES (1,'A question with an example','1','1','0');
